--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=childsafe
+
+spring.datasource.url=jdbc:mysql://localhost:3306/childsafe
+spring.datasource.username=root
+spring.datasource.password=1234
